# Messenger

./: .gitignore  README.md  app.py  pyproject.toml
shmelegram/: __init__.py  config.py  models.py
shmelegram/templates/home/: about.html
