[tool.poetry]
name = "shmelegram"
version = "0.1.0"
description = "Project"
authors = ["Oleg Yevtushok<mineol5005210@gmail.com> and Artem Sukach<artemsukach.official@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
Flask = "^2.0.2"
SQLAlchemy = "^1.4.27"
python-dotenv = "^0.19.2"
Flask-SocketIO = "^5.1.1"
Flask-SQLAlchemy = "^2.5.1"
mysql-connector-python = "^8.0.27"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
